# qbot-chen

./: .gitignore  CMakeLists.txt  README.md  build.sh  config.cpp  config.example.json  config.h  main.cpp  main_system.cpp  main_system.h  mcp_client.cpp  mcp_client.h  mcp_manager.cpp  mcp_manager.h  napcat_bot.cpp  napcat_bot.h  test_cases.cpp  tools.cpp  tools.h
.cnb/: build.sh
.github/workflows/: build-ubuntu.yml  build-windows.yml  ci.yml  clang-tidy.yml  windows.yml
src/bot/: agent.cpp  agent.h  connection_pool.cpp  deepseek.cpp  deepseek.h  image_ocr_service.cpp  models.cpp  models.h  napcat_bot.cpp  napcat_bot.h
src/core/: base.h  command.cpp  command.h  config.cpp  config.h  math.h  tools.cpp  tools.h
src/infra/: cleanup_manager.cpp  database_migrator.cpp  event_bus.cpp  logger.cpp  message_deduplicator.cpp  perf_monitor.cpp  reply_optimizer.cpp
src/knowledge/: embedding_service.cpp  embedding_service.h  embedding_store.cpp  knowledge_retriever.cpp  knowledge_sharing.cpp  quality_scorer.cpp  query_cache.cpp
src/mcp/: mcp_client.cpp  mcp_client.h  mcp_manager.cpp  mcp_manager.h  mcp_message.h  mcp_server.h  mcp_sse_client.cpp
src/memory/: jargon_data_model.cpp  jargon_data_model.h  jargon_inference.cpp  jargon_inference.h  jargon_miner.cpp  jargon_miner.h  jargon_miner_old.cpp  long_memory.cpp  long_memory.h  memory.cpp  memory.h  memory_manager.cpp  style_cache.cpp  style_cache.h  style_learner.cpp  style_learner.h  vocabulary_manager.cpp  vocabulary_manager.h
src/plugin/: builtin_plugins.cpp  builtin_plugins.h  command_handler_plugin.cpp  command_handler_plugin.h  embedding_plugin.cpp  embedding_plugin.h  knowledge_base_plugin.cpp  knowledge_base_plugin.h  long_term_memory_plugin.cpp  long_term_memory_plugin.h  persistence.cpp  persistence.h  plugin_base.cpp  plugin_base.h  plugin_loader.cpp  plugin_loader.h  process_manager.cpp  process_manager.h  user_management_plugin.cpp  user_management_plugin.h
